--- a/src/public/styles/main.css
+++ b/src/public/styles/main.css
@@ -1,6 +1,6 @@
 body {
   font-family:'Roboto',sans-serif;
-  background-image: url("../images/cleanRoom.png");
+  background-image: url("/public/images/cleanRoom.png");
   background-size: cover;
   background-attachment: fixed; 
 }
@@ -8,7 +8,7 @@ body {
 .ExperienceLayout { display: flex; }
  
 .Plaque {
-  background-image: url("../images/plaque2.png");
+  background-image: url("/public/images/plaque2.png");
   background-size: 195px 80px;
   background-repeat: no-repeat;
   height: 80px;
