--- a/src/public/styles/main.css
+++ b/src/public/styles/main.css
@@ -5,7 +5,7 @@ body {
   background-attachment: fixed; 
 }
 
-.ExperienceLayout { display: flex; }
+.ExperienceLayout,.aboutMe { display: flex; }
  
 .Plaque {
   background-image: url("/public/images/plaque2.png");
@@ -19,8 +19,10 @@ body {
   margin-right: auto;
   margin-left: auto;
   width:80%; }
- 
- 
+
+.aboutMe {
+  margin-top: 3%;
+}
 .buttonContainer {
   display: flex;
   justify-content: center;
@@ -30,7 +32,13 @@ body {
  
 .buttonPadding { width:42%; }
  
- 
+.description {
+  font-weight: bold;
+  margin-bottom: 2%;
+}
+.descriptionContainer{
+  /*background-color:#b2a9a7;*/
+ }
 .duration { font-size: 0.8em; }
  
  
@@ -107,7 +115,19 @@ body {
   padding-left: 5%;
   padding-right: 5%; }
  
- 
+.personalDescriptionContainer {
+  width:40%;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 3%;
+  
+}
+.personalDescription{
+  background-color: white;
+  font-family: sans-serif;
+  padding:7%;
+  border-radius: 10%;
+}
 .pointer { cursor: pointer; }
  
  
@@ -116,13 +136,11 @@ body {
   font-size: 1em; }
  
  
-.profileImageContainer {
-  width:225px;
-  height:225px;
-  border-radius:50%;
-  overflow:hidden; }
- 
- 
+.profilePicContainer {
+  width:280px;
+  margin-left: auto;
+  margin-right: auto;
+ }
 .resume {
   padding-top: 1%;
   display: flex; }
@@ -167,7 +185,7 @@ body {
   padding-bottom: 2%;
   text-align: center;
   text-transform: uppercase;
-  font-family: 'sans'; }
+  font-family: sans-serif; }
  
  
 .skillsFrame { }
