--- a/src/public/styles/main.css
+++ b/src/public/styles/main.css
@@ -5,7 +5,7 @@ body {
   background-attachment: fixed; 
 }
 
-.ExperienceLayout,.aboutMe { display: flex; }
+.ExperienceLayout,.aboutMe,.resume { display: flex; }
  
 .Plaque {
   background-image: url("/public/images/plaque2.png");
@@ -115,14 +115,14 @@ body {
   padding-left: 5%;
   padding-right: 5%; }
  
-.personalDescriptionContainer {
+.personalDescription {
   width:40%;
   margin-right: auto;
   margin-left: auto;
   margin-top: 3%;
   
 }
-.personalDescription{
+.descriptionContainer{
   background-color: white;
   font-family: sans-serif;
   padding:7%;
@@ -156,7 +156,9 @@ body {
   padding-top:0.5em;
   border: none;
   border-radius: 0.25em;
-  margin-left:3%; }
+  margin-left:3%;
+  cursor: pointer;
+  }
  
  
 .resumePDF { background-color: #E16F6F; }
