--- a/src/public/styles/main.css
+++ b/src/public/styles/main.css
@@ -34,7 +34,6 @@ body {
  
 .description {
   font-weight: bold;
-  margin-bottom: 2%;
 }
 .descriptionContainer{
   /*background-color:#b2a9a7;*/
@@ -125,7 +124,7 @@ body {
 .descriptionContainer{
   background-color: white;
   font-family: sans-serif;
-  padding:7%;
+  padding:3%;
   border-radius: 10%;
 }
 .pointer { cursor: pointer; }
@@ -165,10 +164,11 @@ body {
  
  
 .resumePageButtonContainer {
-  width:35%;
-  margin-left:auto;
-  margin-right:auto;
-  margin-top:-5%; }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top:2%;
+ }
  
  
 .resumeTitle {
@@ -184,7 +184,7 @@ body {
  
 .sectionTitle {
   font-size:1.7em;
-  padding-bottom: 2%;
+  padding-bottom: 1%;
   text-align: center;
   text-transform: uppercase;
   font-family: sans-serif; }
@@ -197,7 +197,11 @@ body {
   display: flex;
   padding-bottom: 3%; }
  
- 
+ .subTitle{
+  font-weight: bold;
+  margin-bottom: 1%;
+  margin-top: 1%;
+ }
 .tab {
   cursor: pointer;
   font-size: 1.7em;
