--- a/src/public/styles/main.css
+++ b/src/public/styles/main.css
@@ -27,7 +27,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-top: 10%; }
+  padding-top: 7%; }
  
  
 .buttonPadding { width:42%; }
@@ -92,9 +92,16 @@ body {
   text-align: center;
   flex-flow: row; }
  
- 
-.landingPage { /* background-image: url("../images/room.jpg");*/ }
- 
+.landingPage{
+  display: flex;
+  align-items: flex-start;
+}
+.landingPageDescriptionContainer{
+  margin-top:3%;
+  width:400px;
+  font-size:1.15em;
+  margin-left:5%;
+} 
  
 .leftPanel {
   width:30%;
@@ -155,7 +162,7 @@ body {
  }
 .resumeButton {
   color: white;
-  font-size: 1.1em;
+  font-size: 1em;
   font-weight: bold;
   padding-left: 0.6%;
   padding-right:0.6%;
