--- a/src/public/styles/frame.css
+++ b/src/public/styles/frame.css
@@ -39,7 +39,7 @@
     left: -1.2em;
     top: 13px;
     transform: rotate(45deg);
-    z-index: -1;
+    z-index: 1;
 }
 
 .frame {
@@ -54,7 +54,8 @@
     border-bottom: 1em solid #712F04;
     border-left: 1em solid #AF6622;
     box-shadow: 4px 4px 0 0 rgba(189, 166, 72, 0.6);
-    z-index: 1;
+    z-index: 3;
+    position: relative;
 }
 
 .inside {
