--- a/src/public/styles/main.css
+++ b/src/public/styles/main.css
@@ -1,8 +1,6 @@
 body {
   font-family:'Roboto',sans-serif;
-  background-image: url("/public/images/cleanRoom.png");
-  background-size: cover;
-  background-attachment: fixed; 
+  
 }
 
 .ExperienceLayout,.aboutMe,.resume { display: flex; }
@@ -22,6 +20,8 @@ body {
 
 .aboutMe {
   margin-top: 3%;
+  margin-bottom: 5%;
+  flex-wrap: wrap;
 }
 .buttonContainer {
   display: flex;
@@ -53,14 +53,15 @@ body {
  
 .flexContainer, .job { display: flex; }
  
- 
+.floor{
+  max-width: 100%;
+}
 .headerAndButtonContainer {
-  position: absolute;
-  top: 42%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  /* padding-top: 10%;
-  padding-bottom: 30%;*/ }
+  margin-left: auto;
+  margin-right: auto;
+  width:80%;
+   padding-top: 10%;
+  padding-bottom: 10%; }
  
  
 .headerName {
@@ -92,15 +93,19 @@ body {
   text-align: center;
   flex-flow: row; }
  
-.landingPage{
+.landingPageContent{
   display: flex;
   align-items: flex-start;
+  flex-wrap: wrap;
+}
+.landingPageWrapper{
+  min-height: 40em;
 }
 .landingPageDescriptionContainer{
   margin-top:3%;
-  width:400px;
   font-size:1.15em;
   margin-left:5%;
+  max-width: 600px;
 } 
  
 .leftPanel {
@@ -130,6 +135,7 @@ body {
   width:40%;
   margin-right: auto;
   margin-left: auto;
+  margin-top: 3%;
   
 }
 .pictureInsideProject{
@@ -155,10 +161,17 @@ body {
  
  .projects{
   align-items: flex-start;
+  flex-wrap: wrap;
+  margin-bottom: 5%;
  }
  .projectsDescriptionContainer{
   width:20%;
   margin-top:3%;
+ }
+
+ .resume {
+  flex-wrap: wrap;
+  margin-bottom: 3%;
  }
 .resumeButton {
   color: white;
@@ -236,5 +249,9 @@ body {
   float:right;
   padding-right:5%; }
  
- 
+ .wall {
+  background-image: url("/public/images/wall.jpg");
+  background-size: cover;
+  background-attachment: fixed; 
+ }
 .wordButtonContainer { padding-right: 2%; }
