--- a/src/public/styles/main.css
+++ b/src/public/styles/main.css
@@ -19,8 +19,8 @@ body {
   width:80%; }
 
 .aboutMe {
-  margin-top: 3%;
-  margin-bottom: 5%;
+  padding-top: 3%;
+  padding-bottom: 5%;
   flex-wrap: wrap;
 }
 .buttonContainer {
@@ -162,7 +162,7 @@ body {
  .projects{
   align-items: flex-start;
   flex-wrap: wrap;
-  margin-bottom: 5%;
+  padding-bottom: 5%;
  }
  .projectsDescriptionContainer{
   width:20%;
@@ -171,7 +171,7 @@ body {
 
  .resume {
   flex-wrap: wrap;
-  margin-bottom: 3%;
+  padding-bottom: 3%;
  }
 .resumeButton {
   color: white;
@@ -217,7 +217,9 @@ body {
   text-transform: uppercase;
   font-family: sans-serif; }
  
- 
+ .selectedTabStyle{
+  color:#AF6622;
+ }
 .skillsFrame { }
  
  
@@ -235,10 +237,10 @@ body {
   font-size: 1.7em;
   padding-right:0.5em;
   padding-left: 0.5em;
-  color:white; }
+  }
  
   .tab:hover {
-    color:black; /*color:#6ABBDD;*/
+    color:#AF6622; /*color:#6ABBDD;*/
      }
  
  
