--- a/src/public/styles/main.css
+++ b/src/public/styles/main.css
@@ -81,7 +81,7 @@ body {
 .floor{
   background-image: url("/public/images/floor.jpg");
   background-size: cover;
-  height:150px;
+  height:20em;
 }
 .headerAndButtonContainer {
   margin-left: auto;
