--- a/src/public/styles/main.css
+++ b/src/public/styles/main.css
@@ -54,8 +54,8 @@ body {
   }
   .projectsDescriptionContainer{
     width:90% !important;
-  margin-left:auto;
-  margin-right: auto;
+  margin-left:auto !important;
+  margin-right: auto !important;
   }
   .landingPagePictureClass{
     width:100% !important;
@@ -202,6 +202,7 @@ body {
  .projectsDescriptionContainer{
   margin-top:3%;
   width:20%;
+  margin-right: 1%;
  }
 
  .resume {
