--- a/src/public/styles/main.css
+++ b/src/public/styles/main.css
@@ -68,11 +68,7 @@ body {
   margin-left:auto;
   margin-right: auto; 
   }
-  .projectsDescriptionContainer{
-    width:90% !important;
-  margin-left:auto !important;
-  margin-right: auto !important;
-  }
+  
   .landingPagePictureClass{
     width:100% !important;
   }
@@ -238,8 +234,8 @@ body {
  }
  .projectsDescriptionContainer{
   margin-top:3%;
-  width:20%;
   margin-right: 1%;
+  max-width: 340px;
  }
 
  .resume {
